--- a/_assemble-forms.css
+++ b/_assemble-forms.css
@@ -225,20 +225,20 @@ input[type='radio']{
         display: block;
     }
 
-    .form-inline > li{
-        clear: fix;
-
-    }
-
-    .form-inline > li > input{
-        display: inline;
-        width: auto;
-        float: left;
-    }
-
     .form-inline .btn{
         height: $form-item-height;
-        float: left;
+    }
+
+    .form-inline__container{
+        display: flex;
+    }
+
+    .form-inline__container > input{
+        flex: 1 1;
+    }
+
+    .form-inline__container > button{
+        flex: 0 1 auto;
     }
 }
 
