--- a/_assemble-forms.css
+++ b/_assemble-forms.css
@@ -235,6 +235,7 @@ input[type='radio']{
 
     .form-inline__container > input{
         flex: 1 1;
+        width: 100%;
     }
 
     .form-inline__container > button{
