--- a/_assemble-forms.css
+++ b/_assemble-forms.css
@@ -237,7 +237,8 @@ input[type='radio']{
         display: flex;
     }
 
-    .form-inline__container > input{
+    .form-inline__container > input,
+    .form-inline__container > select{
         flex: 1 1;
         width: 100%;
     }
