change starts with selector to contains selector

--- a/_assemble-forms.css
+++ b/_assemble-forms.css
@@ -21,9 +21,9 @@
     !GENERAL
 \*------------------------------------*/
 
-[class^='form-'] > li > input,
-[class^='form-'] > li > textarea,
-[class^='form-'] > li > select{
+[class*='form-'] > li > input,
+[class*='form-'] > li > textarea,
+[class*='form-'] > li > select{
     display: block;
     width: 100%;
 }
